Fix gap color for local overrides icons in workspace
Bug: 1427397
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4561956
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/legacy/applicationColorTokens.css
+++ b/front_end/ui/legacy/applicationColorTokens.css
@@ -27,7 +27,7 @@
   --icon-folder-deployed: var(--color-primary-bright);
   --icon-folder-workspace: var(--color-orange);
   --icon-force-white: var(--color-on-primary);
-  --icon-gap-default: var(--color-on-primary);
+  --icon-gap-default: var(--color-background);
   --icon-gap-force-white: var(--legacy-selection-bg-color);
   --icon-gap-inactive: var(--legacy-selection-inactive-bg-color);
   --icon-gap-toolbar: var(--color-background-elevation-1);
